Acrescentar arquivo como parametro da main

--- a/etapa2/Makefile
+++ b/etapa2/Makefile
@@ -1,5 +1,4 @@
-#target: main main2
-target: main2
+target: main 
 
 #-d gera o arquivo y.tab.h, com os tokens
 yacc: yacc.y
@@ -13,21 +12,13 @@ lex: scanner.l
 	lex -o scanner.yy.c scanner.l
 	gcc -o scanner.obj -c scanner.yy.c
 
-#funcao main depende agora, tambem, do analisador sintatico(yac.obj)
-#main: yacc lex hashtable main.c
-#	gcc -o etapa2 main.c scanner.obj yac.obj hashtable.obj
-
-
-#testes: diferentes versoes da main.c
-main2:	yacc lex hashtable 
-	gcc -o etapa2.test2 yac.obj scanner.obj hashtable.obj
-
+main:   yacc lex hashtable main.c
+	gcc -o etapa2 yac.obj scanner.obj hashtable.obj -Wall
 clean:
 	rm scanner.yy.c
 	rm y.tab.c
 	rm y.tab.h
 	rm *.obj
-	rm etapa2.test2
 	rm etapa2
 		
 
