Sample2 Rodando. Corrigido regras. Adicionado chamadas de funcao diretamente na regra expressao, sem criar uma regra 'funcall' intermediaria. Comando agora contem tambem um bloco de comandos , que eh um comando. Foi adicionado tb a regra comandosseq, que representa uma lista de comandos, separados por ponto-e-virgula. Os comandos agora nao possuem mais terminador ; separadamente, ou seja, a regra comandosseq eh quem trata os ; de cada comando

--- a/etapa2/Makefile
+++ b/etapa2/Makefile
@@ -2,7 +2,7 @@ target: main
 
 #-d gera o arquivo y.tab.h, com os tokens
 yacc: yacc.y
-	yacc -d yacc.y
+	yacc -dv yacc.y
 	gcc -o yac.obj -c y.tab.c
 
 hashtable: hashtable.c
