1) Adicionei main.c para ser compilavel. Alem disso, a main aceita um arquivo como parametro de entrada, diferente do redirecionamento da entrada que  havia sendo feito ateh agora ( ./etapa2 < sample2.ling). \n 2) Adicionei o #include 'hashtable.h' na main, pois o yacc não estava adicionando no arquivo fonte .c gerado (mesmo hashtable.h estando incluido no fonte do yacc). Sendo assim, o include y.tab.h encontra o tipo HASH_NODE, que antes nao encontrava.\n 3) Adicionei a funcao initMe() em hashtable.h (haviamos esquecido desde a etapa1 :S, o que nao eh um problema, pois gera apenas um warning de declaracao implicita). \n 4)Acrescentei o cabecalho da funcao yyparse() em main.c

--- a/etapa2/Makefile
+++ b/etapa2/Makefile
@@ -13,7 +13,7 @@ lex: scanner.l
 	gcc -o scanner.obj -c scanner.yy.c
 
 main:   yacc lex hashtable main.c
-	gcc -o etapa2 yac.obj scanner.obj hashtable.obj -Wall
+	gcc -o etapa2 main.c yac.obj scanner.obj hashtable.obj -Wall
 clean:
 	rm scanner.yy.c
 	rm y.tab.c
