--- a/etapa3/Makefile
+++ b/etapa3/Makefile
@@ -8,18 +8,21 @@ yacc: yacc.y
 hashtable: hashtable.c
 	gcc -o hashtable.obj -c hashtable.c
 
+astree:  astree.c
+	gcc -o astree.obj -c astree.c
+
 lex: scanner.l
 	lex -o scanner.yy.c scanner.l
 	gcc -o scanner.obj -c scanner.yy.c
 
-main:   yacc lex hashtable main.c
-	gcc -o etapa2 main.c yac.obj scanner.obj hashtable.obj -Wall
+main:   yacc lex hashtable astree main.c
+	gcc -o etapa3 main.c yac.obj scanner.obj hashtable.obj astree.obj -Wall
 clean:
 	rm scanner.yy.c
 	rm y.tab.c
 	rm y.tab.h
 	rm *.obj
 	rm y.output
-	rm etapa2
+	rm etapa3
 		
 
