--- a/etapa6/Makefile.new
+++ b/etapa6/Makefile.new
@@ -1,4 +1,4 @@
-target: main
+target: main 
 
 #-d gera o arquivo y.tab.h, com os tokens
 yacc: yacc.y
@@ -8,11 +8,9 @@ yacc: yacc.y
 hashtable: hashtable.c
 	gcc -o hashtable.obj -c hashtable.c
 
-astree: astree.c
+astree:  astree.c
 	gcc -o astree.obj -c astree.c
 
-tac: tac.c
-	gcc -o tac.obj -c tac.c
 
 genco: genco.c
 	gcc -o genco.obj -c genco.c
@@ -21,8 +19,9 @@ lex: scanner.l
 	lex -o scanner.yy.c scanner.l
 	gcc -o scanner.obj -c scanner.yy.c
 
-main: yacc lex hashtable astree tac genco main.c
-	gcc -o etapa6 main.c yac.obj scanner.obj hashtable.obj astree.obj tac.obj genco.obj -Wall
+main:   yacc lex hashtable astree genco main.c
+	gcc -o etapa5 main.c yac.obj scanner.obj hashtable.obj astree.obj genco.obj -Wall
+
 
 clean:
 	rm scanner.yy.c
@@ -30,4 +29,4 @@ clean:
 	rm y.tab.h
 	rm *.obj
 	rm y.output
-	rm etapa6
+	rm etapa5
