Ajustado TAC de vetor(etapa5). Adicionado codigo para geracao do assembly (etapa6)

--- a/etapa6.old/Makefile
+++ b/etapa6.old/Makefile
@@ -1,4 +1,4 @@
-target: main 
+target: main
 
 #-d gera o arquivo y.tab.h, com os tokens
 yacc: yacc.y
@@ -8,9 +8,11 @@ yacc: yacc.y
 hashtable: hashtable.c
 	gcc -o hashtable.obj -c hashtable.c
 
-astree:  astree.c
+astree: astree.c
 	gcc -o astree.obj -c astree.c
 
+tac: tac.c
+	gcc -o tac.obj -c tac.c
 
 genco: genco.c
 	gcc -o genco.obj -c genco.c
@@ -19,8 +21,9 @@ lex: scanner.l
 	lex -o scanner.yy.c scanner.l
 	gcc -o scanner.obj -c scanner.yy.c
 
-main:   yacc lex hashtable astree genco main.c
-	gcc -o etapa6 main.c yac.obj scanner.obj hashtable.obj astree.obj genco.obj -Wall
+main: yacc lex hashtable astree tac genco main.c
+	gcc -o etapa6 main.c yac.obj scanner.obj hashtable.obj astree.obj tac.obj genco.obj -Wall
+
 clean:
 	rm scanner.yy.c
 	rm y.tab.c
@@ -28,5 +31,3 @@ clean:
 	rm *.obj
 	rm y.output
 	rm etapa6
-		
-
