--- a/etapa5/Makefile
+++ b/etapa5/Makefile
@@ -22,7 +22,7 @@ lex: scanner.l
 	gcc -o scanner.obj -c scanner.yy.c
 
 main: yacc lex hashtable astree tac genco main.c
-	gcc -o etapa5 main.c yac.obj scanner.obj hashtable.obj astree.obj tac.obj genco.obj -Wall -Wextra
+	gcc -o etapa5 main.c yac.obj scanner.obj hashtable.obj astree.obj tac.obj genco.obj -Wall
 
 clean:
 	rm scanner.yy.c
